NO-TICKET: Removed MaxPermSize warning and test plugin upgrade